--- a/Html Basic/basic.html
+++ b/Html Basic/basic.html
@@ -44,6 +44,27 @@ Hello!
                   RER       - Apollinaire
         <h1>Hello!</h1>
       </pre>
+
+<ul>
+    <li>Item one</li>
+    <li>Item two</li>
+    <ul type="circle">
+        <li>Item threee</li>
+    </ul>
+</ul>
+
+<ol>
+    <li>Mix flour, baking powder, sugar, and salt.</li>
+    <li>In another bowl, mix eggs, milk, and oil.</li>
+    <li>Stir both mixtures together.</li>
+    <ol>
+            <li>Mix flour, baking powder, sugar, and salt.</li>
+            <li>Fill muffin tray 3/4 full.</li>
+            <li>Bake for 20 minutes.</li>
+        </ol>
+    <li>Fill muffin tray 3/4 full.</li>
+    <li>Bake for 20 minutes.</li>
+</ol>
 </body>
 </html>
 
