--- a/Html Basic/basic.html
+++ b/Html Basic/basic.html
@@ -57,7 +57,7 @@ Hello!
     <li>Mix flour, baking powder, sugar, and salt.</li>
     <li>In another bowl, mix eggs, milk, and oil.</li>
     <li>Stir both mixtures together.</li>
-    <ol>
+    <ol type="a">
             <li>Mix flour, baking powder, sugar, and salt.</li>
             <li>Fill muffin tray 3/4 full.</li>
             <li>Bake for 20 minutes.</li>
