--- a/Html Basic/Form.html
+++ b/Html Basic/Form.html
@@ -15,7 +15,7 @@
         <!--Always name attribute for all html elements for key-value pairs, use camel casing for names-->
         <input type="text" name="firstName" placeholder="First Name" required>
         <input type="password" name="password" placeholder="Password" required maxlength="10" minlength="4">
-        <input type="tel" name="telephoneNumber" pattern="^[0-9]{10}$">
+        <input type="tel" name="telephone" pattern="^[0-9]{10}$">
         <input type="datetime-local" name="dob">
         <input type="file" name="myProfile">
         <input type="color" name="chooseColor">
