--- a/Html Basic/basic.html
+++ b/Html Basic/basic.html
@@ -33,7 +33,7 @@ Hello!
              DOU
              LOU
             REUSE
-            QUE TU
+            QUE tTU
             PORTES
           ET QUI T'
           ORNE O CI
