--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
     <!-- <script src="javascript1.js"></script> -->
+    <script src="javascript2.js"></script>
     <!-- <script src="callback.js"></script> -->
-    <script src="async.js"></script>
+    <!-- <script src="async.js"></script> -->
 </head>
 <body>
     <div>
