--- a/facebookExample.html
+++ b/facebookExample.html
@@ -9,24 +9,25 @@
     <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="facebookExample.js"></script>
+    
 </head>
 
 <body>
 
-    <div class="container">
+    <div id="container" class="container">
         <div class="row">
             <div class="col-md-3">
                 <input type="text" class="form-control" id="myPost">
             </div>
             <div class="col-md-3">
-                <button type="button" class="btn btn-primary" onclick="createPost()">Post</button>
+                <button type="button" id="onc" class="btn btn-primary">Post</button>
+                <!-- <button type="button" class="btn btn-primary" id="onclick" onclick="createPost()">Post</button> -->
             </div>
         </div>
     </div>
     <div id="postContainer" class="container"></div>
 
-
+    <script src="facebookExample.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
