--- a/Javascript/getElementById.html
+++ b/Javascript/getElementById.html
@@ -8,7 +8,7 @@
   <button onclick="changeColor('blue');">blue</button>
   <button onclick="changeColor('red');">red</button>
 
-  <p class="para">Other text here</p>
+  <p id="para">Other text here</p>
   <button onclick="changeColor('green');">green</button>
   <button onclick="changeColor('orange');">orange</button>
 </body>
