--- a/Test/Test 2/test2.html
+++ b/Test/Test 2/test2.html
@@ -29,15 +29,15 @@
 
         </table>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <button type="button" class="btn btn-dark add" id="testButton">Hello!</button>
         <p id="testPara">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
             the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
             scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
             electronic typesetting, remaining essentially unchanged.</p>
-    </div>
+    </div> -->
 
-    <!-- <script type="text/javascript" src="test2.js"></script> -->
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -48,8 +48,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="test2JQuery.js"></script>
+        <script type="text/javascript" src="test2DOM.js"></script>
+        <script type="text/javascript" src="test2Logic.js"></script>
+    <!-- <script type="text/javascript" src="test2JQuery.js"></script> -->
 </body>
 
 </html>
